deployment-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apache
  name: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: wozorio/sandbox:apache-2.0-ubuntu
          ports:
            - containerPort: 80
